# rem-llm

./: Modelfile  Modelfile.trained  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: config.yaml  llamafactory_qlora.yaml
config/domains/: beginner_web_cli.yaml  nextjs.yaml
data/: prepare_cache.json  sample.jsonl
data/domains/beginner/: eval.jsonl  raw.generated.jsonl  raw.jsonl  train.jsonl
data/domains/nextjs/raw/: fullstack.jsonl
rem-cli/: .remcli.toml.example  Cargo.toml  README.md
rem-cli/prompts/: system_prompt.txt
rem-cli/src/: agentic.rs  feedback.rs  intent.rs  main.rs  memory.rs  ollama.rs  provider.rs
scripts/: benchmark_models.py  compare_reports.py  evaluate_exec.py  evaluate_model.py  export_gguf.sh  merge_adapter.py  prepare_data.py  run_pipeline.sh  train.sh  train_unsloth.py
src/remllm/: __init__.py  agent.py  api_server.py  cli.py  config.py  experiment.py  indexing.py  logging.py
src/remllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/remllm/context/: __init__.py  adaptive.py  classifier.py  indexer.py  structured.py
src/remllm/data/: augment.py  catalog.py  dedup.py  filter.py  generator.py  loader.py  mixer.py  prepper.py  schemas.py  scraper.py  streaming.py
src/remllm/eval/: base.py  beginner_eval.py  benchmark.py  benchmark_harness.py  comparator.py  executable.py  quality.py  sandbox.py  security_eval.py  suite.py  typescript_eval.py
src/remllm/export/: gguf.py  merge.py  ollama.py
src/remllm/train/: deepspeed_config.py  distill.py  dpo.py  grpo.py  unsloth.py
tests/: conftest.py  test_adaptive.py  test_config.py  test_context.py  test_data.py  test_eval_beginner.py  test_eval_enhanced.py  test_eval_executable.py  test_eval_quality.py  test_generator_beginner.py  test_structured.py
