[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remllm"
version = "0.2.0"
description = "Coding LLM training pipeline — fine-tune, evaluate, and deploy coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "REM LLM"}]
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "transformers>=4.40",
    "datasets>=2.18",
    "trl>=0.8",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "peft>=0.10",
]
merge = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
]
eval = [
    "chromadb>=0.5",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
remllm = "remllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
