[package]
name = "rem-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI assistant for beginner coding with rem models"
license = "MIT"

[[bin]]
name = "rem"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures-util = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
walkdir = "2.5"
